# douyin-downloader2026

./: .gitignore  README.md  debug_render.py  debug_render2.py  dydownload.spec  environment.yml  package_extension.sh  pyproject.toml  使用说明.txt
dydownload/: __init__.py  __main__.py  api_client.py  cli.py  config.py  cookie_manager.py  downloader.py  gui.py  server.py  signature.py  utils.py  video_parser.py
extension/: manifest.json
extension/background/: service-worker.js
extension/content/: content.js
extension/popup/: popup.css  popup.html  popup.js
