[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dydownload"
version = "1.0.0"
description = "抖音视频下载工具 - 通过浏览器插件获取 Cookie 后下载无水印视频"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "beautifulsoup4>=4.12",
    "hishel>=0.0.30",
    "py_mini_racer>=0.6.0",
]

[project.scripts]
dydownload = "dydownload.cli:app"
dydownload-gui = "dydownload.gui:main"

[tool.setuptools.packages.find]
where = ["."]
